@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.387 2006/09/05 13:24:10 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.388 2006/09/05 14:14:32 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -22,6 +22,14 @@ PH/01 If a server that rejects MAIL FROM:<> was the target of a sender
       Whatever the result of the callout, the value of the domain cache is
       left unchanged (for any other kind of callout, getting as far as trying
       RCPT means that the domain itself is ok).
+
+PH/02 Tidied a number of unused variable and signed/unsigned warnings that
+      gcc 4.1.1 threw up.
+
+PH/03 On Solaris, an unexpectedly close socket (dropped connection) can
+      manifest itself as EPIPE rather than ECONNECT. When tidying away a
+      session, the daemon ignores ECONNECT errors and logs others; it now
+      ignores EPIPE as well.
 
 
 Exim version 4.63
